[package]
name = "server"
version = "0.1.0"
authors = ["dongfeng <18510416169@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messages = {path = "../messages"}
yaml-rust = "0.4"
#web_inf = {path = "../web_inf"}
actix-web = "2.0"
actix-rt = "1.0"
actix-redis = "0.8.2"
redis-async = "0.6.1"
clap = "2.33"
redis = "0.16.0"
dotenv = "0.15.0"
#dotenv_codegen = "0.15.0"
